receiving errors after installing dependencies

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "argon-design-system-react",
     "design-system-react"
   ],
-  "author": "Creative Tim",
+  "author": "Michael Campbell",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/creativetimofficial/argon-design-system-react/issues"
